crates/graphite/tests/ui/graph_unknown_edge_label.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `NotARealEdge` in this scope
  --> tests/ui/graph_unknown_edge_label.rs:38:16
   |
38 |         oops = NotARealEdge(tanaka -> sales),
   |                ^^^^^^^^^^^^ not found in this scope
